...
      android:layout_height="0dp"
      app:customBackgroundColor="@{@color/component_color_shared_white_background_color}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="@id/onboarding_language_center_guide" />

    <ImageView
      android:id="@+id/onboarding_app_language_image"
      android:layout_width="130dp"
      android:layout_height="140dp"
      android:contentDescription="@string/onboarding_otter_content_description"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/onboarding_language_image_guide"
      app:srcCompat="@drawable/otter" />

    <TextView
      android:id="@+id/onboarding_language_label"
      style="@style/OnboardingLanguageLabelStyle"
      android:layout_marginStart="@dimen/phone_shared_margin_large"
      android:layout_marginTop="@dimen/phone_shared_margin_small"
      android:layout_marginEnd="@dimen/phone_shared_margin_large"
      android:layout_marginBottom="@dimen/phone_shared_margin_small"
      android:text="@string/onboarding_language_activity_select_label"
      android:labelFor="@id/onboarding_language_dropdown"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/onboarding_app_language_image" />

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/onboarding_language_dropdown_background"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_medium"
      android:layout_marginEnd="@dimen/phone_shared_margin_xl"
      app:layout_constraintEnd_toEndOf="@id/onboarding_language_label"
...
          android:inputType="none"
          android:padding="@dimen/onboarding_shared_padding_small" />
      </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
      android:id="@+id/onboarding_language_explanation"
      style="@style/OnboardingLanguageExplanationStyle"
      android:layout_marginTop="@dimen/phone_shared_margin_small"
      android:layout_marginBottom="@dimen/phone_shared_margin_large"
      android:text="@string/onboarding_language_activity_explanation_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
...
